--- a/src/chatsystem/UserListView.fxml
+++ b/src/chatsystem/UserListView.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatsystem.UserListViewController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatsystem.UserListViewController">
     <children>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600" prefWidth="250" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600" prefWidth="250" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <TableView fx:id="userTable" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                        <TableColumn fx:id="nameColumn" prefWidth="100.0" text="Name" />
-                        <TableColumn fx:id="ipAdressColumn" prefWidth="100.0" text="IP" />
+                        <TableColumn fx:id="nameColumn" editable="false" prefWidth="100.0" text="Name" />
+                        <TableColumn fx:id="ipAdressColumn" editable="false" minWidth="-Infinity" prefWidth="-1.0" text="IP" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
