--- a/src/chatsystem/MessageBox.fxml
+++ b/src/chatsystem/MessageBox.fxml
@@ -16,6 +16,7 @@
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor></TextArea>
+                  <ListView fx:id="messageTable" layoutX="74.0" layoutY="41.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                     </children>
                <cursor>
                   <Cursor fx:constant="DEFAULT" />
