On ne se voit plus nous même !

--- a/src/chatsystem/ConnectView.fxml
+++ b/src/chatsystem/ConnectView.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.3125" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane dividerPositions="0.3125" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
   <items>
-    <AnchorPane fx:id="leftLayout" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="250.0" SplitPane.resizableWithParent="false" />
-    <AnchorPane fx:id="rightLayout" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" SplitPane.resizableWithParent="false" />
+    <AnchorPane fx:id="leftLayout" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="250.0" stylesheets="@DarkTheme.css" SplitPane.resizableWithParent="false" />
+    <AnchorPane fx:id="rightLayout" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" stylesheets="@DarkTheme.css" SplitPane.resizableWithParent="false" />
   </items>
 </SplitPane>
