--- a/src/chatsystem/MessageBox.fxml
+++ b/src/chatsystem/MessageBox.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatsystem.MessageBoxController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatsystem.MessageBoxController">
     <children>
-        <SplitPane dividerPositions="0.7" layoutX="231.0" layoutY="158.0" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="550.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <SplitPane dividerPositions="0.7" layoutX="231.0" layoutY="158.0" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="550.0" stylesheets="@DarkTheme.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
-                <AnchorPane minHeight="-Infinity" minWidth="-Infinity">
+                <AnchorPane minHeight="-Infinity" minWidth="-Infinity" stylesheets="@DarkTheme.css">
                     <children>
                   <ListView fx:id="messageTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                     </children>
@@ -18,10 +19,13 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
                 </AnchorPane>
-                <AnchorPane minHeight="-Infinity" minWidth="-Infinity">
+                <AnchorPane minHeight="-Infinity" minWidth="-Infinity" stylesheets="@DarkTheme.css">
                     <children>
-                        <Button fx:id="sendButton" layoutX="224.0" layoutY="137.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#send" prefHeight="25.0" prefWidth="100.0" text="Send" AnchorPane.bottomAnchor="15.0" />
-                        <TextArea fx:id="prompter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="528.0" promptText="Type Here" wrapText="true" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                        <Button fx:id="sendButton" layoutX="224.0" layoutY="137.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#send" prefHeight="33.0" prefWidth="100.0" stylesheets="@DarkTheme.css" text="Send" AnchorPane.bottomAnchor="15.0" />
+                        <TextArea fx:id="prompter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="528.0" promptText="Type Here..." stylesheets="@DarkTheme.css" wrapText="true" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font></TextArea>
                     </children>
                 </AnchorPane>
             </items>
