New Player : disconnect button !
DONE : appels "GET" nettoyés !
TODO : - Si un USER se deconnect, puis reviens, dedoublement de la
messagebox
- creer un timer sur les users pour les supprimer si noReponse (?)
- Thread-4, no JavaFX application thread error to solve ? (on reception,
sometimes.. often when flooded)

--- a/src/chatsystem/DarkTheme.css
+++ b/src/chatsystem/DarkTheme.css
@@ -2,6 +2,8 @@
     -fx-background-color: #1d1d1d;
 }
 
+
+
 .label {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
@@ -21,6 +23,15 @@
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: white;
     -fx-opacity: 1;
+}
+
+.list-view {
+    -fx-base: #1d1d1d;
+    -fx-control-inner-background: #1d1d1d;
+    -fx-background-color: #1d1d1d;
+    -fx-table-cell-border-color: transparent;
+    -fx-table-header-border-color: transparent;
+    -fx-padding: 5;
 }
 
 .table-view {
@@ -61,6 +72,11 @@
 }
 
 .split-pane:horizontal > .split-pane-divider {
+    -fx-border-color: transparent #1d1d1d transparent #1d1d1d;
+    -fx-background-color: transparent, derive(#1d1d1d,20%);
+}
+
+.split-pane:vertical > .split-pane-divider {
     -fx-border-color: transparent #1d1d1d transparent #1d1d1d;
     -fx-background-color: transparent, derive(#1d1d1d,20%);
 }
