--- a/src/chatsystem/MessageBox.fxml
+++ b/src/chatsystem/MessageBox.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -8,13 +9,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" style="-fx-background-color: black;" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatsystem.MessageBoxController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatsystem.MessageBoxController">
     <children>
         <SplitPane dividerPositions="0.7" layoutX="231.0" layoutY="158.0" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="550.0" stylesheets="@DarkTheme.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
-                <AnchorPane minHeight="-Infinity" minWidth="-Infinity" stylesheets="@DarkTheme.css">
+                <AnchorPane minHeight="-Infinity" minWidth="-Infinity" stylesheets="@DarkTheme.css" SplitPane.resizableWithParent="false">
                     <children>
-                  <ListView fx:id="messageTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <ListView fx:id="messageTable" mouseTransparent="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets></ListView>
@@ -23,17 +24,35 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
                 </AnchorPane>
-                <AnchorPane minHeight="-Infinity" minWidth="-Infinity" stylesheets="@DarkTheme.css">
+                <AnchorPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #383838;">
                     <children>
-                        <Button fx:id="sendButton" defaultButton="true" layoutX="420.0" layoutY="76.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#send" prefHeight="35.0" prefWidth="120.0" stylesheets="@DarkTheme.css" text="Send" AnchorPane.bottomAnchor="69.0" />
+                        <Button fx:id="sendButton" layoutX="420.0" layoutY="76.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#send" prefHeight="35.0" prefWidth="120.0" style="-fx-border-color: none; -fx-background-color: #f3ae53; -fx-text-fill: black;" stylesheets="@DarkTheme.css" text="Send" AnchorPane.bottomAnchor="69.0">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                         <TextArea fx:id="prompter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="400.0" promptText="Type Here..." stylesheets="@DarkTheme.css" wrapText="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <font>
                         <Font size="16.0" />
-                     </font></TextArea>
-                  <Button fx:id="disconnectButton" cancelButton="true" layoutX="420.0" layoutY="135.0" mnemonicParsing="false" onAction="#disconnect" prefHeight="35.0" prefWidth="120.0" stylesheets="@DarkTheme.css" text="Disconnect" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-                  <Button fx:id="fileButton" layoutX="419.0" layoutY="9.0" mnemonicParsing="false" onAction="#chooseFile" prefHeight="35.0" prefWidth="120.0" stylesheets="@DarkTheme.css" text="Add file" AnchorPane.bottomAnchor="136.0" AnchorPane.leftAnchor="419.0" />
-                  <CheckBox fx:id="checkFile" layoutX="423.0" layoutY="51.0" mnemonicParsing="false" text="Aucun fichier" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></TextArea>
+                  <Button fx:id="disconnectButton" cancelButton="true" layoutX="420.0" layoutY="135.0" mnemonicParsing="false" onAction="#disconnect" prefHeight="35.0" prefWidth="120.0" style="-fx-border-color: none;" stylesheets="@DarkTheme.css" text="Disconnect" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+                  <Button fx:id="fileButton" layoutX="419.0" layoutY="9.0" mnemonicParsing="false" onAction="#chooseFile" prefHeight="35.0" prefWidth="120.0" style="-fx-border-color: none;" stylesheets="@DarkTheme.css" text="Add file" AnchorPane.bottomAnchor="136.0" AnchorPane.leftAnchor="419.0">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+                  <CheckBox fx:id="checkFile" layoutX="423.0" layoutY="51.0" mnemonicParsing="false" text="Aucun fichier" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></CheckBox>
                     </children>
+               <effect>
+                  <InnerShadow />
+               </effect>
                 </AnchorPane>
             </items>
         </SplitPane>
