--- a/src/chatsystem/DisconnectView.fxml
+++ b/src/chatsystem/DisconnectView.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.media.*?>
 <?import javafx.scene.text.*?>
@@ -9,16 +12,39 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatsystem.DisconnectViewController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #383838;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chatsystem.DisconnectViewController">
    <children>
+      <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="800.0">
+         <children>
+            <ImageView fitHeight="200.0" fitWidth="800.0" focusTraversable="true" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <image>
+                  <Image url="@shenron.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </children>
+      </AnchorPane>
       <Pane layoutX="200.0" layoutY="100.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@DarkTheme.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <TextField fx:id="nicknameBox" alignment="CENTER" layoutX="300.0" layoutY="379.0" prefHeight="30.0" prefWidth="200.0" promptText="Enter a nickname" />
-            <Button fx:id="connectButton" alignment="CENTER" layoutX="339.0" layoutY="427.0" mnemonicParsing="false" onAction="#connect" prefHeight="30.0" prefWidth="122.0" style="-fx-background-color: #fa1e1e;" text="Connect" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="connectButton" alignment="CENTER" layoutX="339.0" layoutY="427.0" mnemonicParsing="false" onAction="#connect" prefHeight="30.0" prefWidth="122.0" style="-fx-border-color: #864b23; -fx-background-color: #f3ae53; -fx-text-fill: black;" text="Connect" textAlignment="CENTER">
                <font>
                   <Font name="Star Jedi" size="14.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
+            <ImageView fitHeight="200.0" fitWidth="800.0" focusTraversable="true" layoutY="155.0" pickOnBounds="true">
+               <image>
+                  <Image url="@title.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
          </children>
       </Pane>
    </children>
