--- a/src/chatsystem/MessageBox.fxml
+++ b/src/chatsystem/MessageBox.fxml
@@ -37,7 +37,7 @@
                      <cursor>
                         <Cursor fx:constant="TEXT" />
                      </cursor></TextArea>
-                  <Button fx:id="disconnectButton" cancelButton="true" layoutX="420.0" layoutY="135.0" mnemonicParsing="false" onAction="#disconnect" prefHeight="35.0" prefWidth="120.0" style="-fx-border-color: none;" stylesheets="@DarkTheme.css" text="Disconnect" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                  <Button fx:id="disconnectButton" cancelButton="true" layoutX="420.0" layoutY="135.0" mnemonicParsing="false" onAction="#areYouSure" prefHeight="35.0" prefWidth="120.0" style="-fx-border-color: none;" stylesheets="@DarkTheme.css" text="Disconnect" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
